--- a/random.html
+++ b/random.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/details.js"></script>
+    <script type="module" src="/random.js"></script>
   </body>
 </html>
